<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:focusableInTouchMode="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:visibility="visible"
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="23dp"
            android:letterSpacing="0.1"
            android:text="@string/username_upper"
            android:textColor="#9B9B9B"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:letterSpacing="0.1"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:visibility="visible"
            android:theme="@style/PersonalInfoEditText"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <TextView
            android:visibility="visible"
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="23dp"
            android:letterSpacing="0.1"
            android:text="@string/password_upper"
            android:textColor="#9B9B9B"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <EditText
            android:visibility="visible"
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:letterSpacing="0.1"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:theme="@style/PersonalInfoEditText"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <TextView
            android:visibility="visible"
            android:id="@+id/tv_verify_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="23dp"
            android:letterSpacing="0.1"
            android:text="@string/verify_password"
            android:textColor="#9B9B9B"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <EditText
            android:visibility="visible"
            android:id="@+id/et_verify_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:letterSpacing="0.1"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:theme="@style/PersonalInfoEditText"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_verify_password" />

        <TextView
            android:visibility="visible"
            android:id="@+id/tv_old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="23dp"
            android:letterSpacing="0.1"
            android:text="@string/old_password"
            android:textColor="#9B9B9B"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_verify_password" />

        <EditText
            android:visibility="visible"
            android:id="@+id/et_old_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:letterSpacing="0.1"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:theme="@style/PersonalInfoEditText"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_old_password" />

        <TextView
            android:id="@+id/tv_regional_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:letterSpacing="0.1"
            android:text="@string/regional_options"
            android:textColor="#9B9B9B"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_old_password" />

        <TextView
            android:visibility="visible"
            android:id="@+id/tv_language_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.1"
            android:text="@string/language"
            android:textColor="#9B9B9B"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_regional_options" />

        <Button
            android:id="@+id/btn_language"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="9dp"
            android:letterSpacing="0.1"
            android:textColor="#9B9B9B"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:visibility="visible"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_regional_options"
            android:text="English" />

        <Button
            android:visibility="visible"
            android:id="@+id/btn_log_out"
            fontPath="fonts/Avenir_medium.ttf"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:lineSpacingExtra="-2sp"
            android:text="@string/log_out"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/btn_lipstick"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_language_title"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>